apps/sample/base/whoami/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: whoami
spec:
  parentRefs:
    - kind: Gateway
      name: http
      namespace: kube-system
  hostnames:
    - whoami.dudo.dev
    - whoami.marin.dev
  rules:
    - backendRefs:
        - name: whoami
          port: 80
